--- a/index.html
+++ b/index.html
@@ -4,34 +4,29 @@
     
 <head>
     <title>Broadway</title>
+    <link href="Resources/style.css" type="text/css" rel="stylesheet"/>
 </head>
 
 <body>
-    <h1>Broadway Design</h1>
-    <div>
-            <p><a href="#home">Home</a></p>
-            <p><a href="#process">Process</a></p>
-            <p><a href="#portfolio">Work</a></p>
-            <p><a href="#team">Team</a></p>
-            <p><a href="#contact">Contact</a></p>
+    <div class="header">
+        <h1>Broadway Design</h1>
+        <p><a href="#home">Home</a></p>
+        <p><a href="#process">Process</a></p>
+        <p><a href="#portfolio">Work</a></p>
+        <p><a href="#team">Team</a></p>
+        <p><a href="#contact">Contact</a></p>
     </div>
     <div id="process">
         <h2>Our Process</h2>
-        <div id="identify">
-            <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/identify.svg"/>
-            <h3>Identify</h3>
-            <p>We focus on the most important details.</p>
-        </div>
-        <div id="understand">
-            <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/understand.svg"/>
-            <h3>Identify</h3>
-            <p>We focus on the most important details.</p>
-        </div>
-        <div id="execute">
-            <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/execute.svg"/>
-            <h3>Identify</h3>
-            <p>We focus on the most important details.</p>
-        </div>
+        <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/identify.svg"/>
+        <h3>Identify</h3>
+        <p>We focus on the most important details.</p>
+        <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/understand.svg"/>
+        <h3>Understand</h3>
+        <p>We study our projects inside and out.</p>
+        <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/execute.svg"/>
+        <h3>Execute</h3>
+        <p>We put everything we have into our work.</p>
     </div>
     <h2 class="subtitle">Designed in New York</h2>
     <div id="portfolio">
